--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.0",
+    "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
+  },
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack serve"
   }
 }
